Prevent scrollbar in activity popup

--- a/view/adminhtml/web/css/layout/_activity.less
+++ b/view/adminhtml/web/css/layout/_activity.less
@@ -130,6 +130,7 @@
 
             .data-grid-cell-content {
                 display: block;
+                word-break: break-word;
             }
 
             .toolbar {
